# spectral_mesh_rs

./: .gitignore  Cargo.toml  README.md
shaders/: displace.wgsl
src/: audio.rs  main.rs  mesh.rs  midi.rs  noise.rs  p_lock.rs  renderer.rs  state.rs  video.rs
