[package]
name = "spectral_mesh"
version = "5.0.0"
edition = "2021"
authors = ["Andrei Jay (original)", "Migration to Rust"]
description = "Real-time audiovisual mesh distortion - Rust/wgpu port"

[features]
default = ["camera"]
camera = ["nokhwa"]

[dependencies]
# Video capture (macOS AVFoundation, Linux V4L2)
nokhwa = { version = "0.10", features = ["input-avfoundation"], optional = true }

# GPU abstraction (Vulkan on Pi4, Metal on macOS)
wgpu = "0.19"
# Windowing cross-platform
winit = "0.29"
# Async runtime for wgpu
pollster = "0.3"
# MIDI input
midir = "0.9"
# Perlin noise
noise = "0.9"
# Math (vectors, matrices)
glam = "0.25"
# For GPU buffers
bytemuck = { version = "1.14", features = ["derive"] }
# Logging
env_logger = "0.11"
log = "0.4"
# Image processing
image = "0.25"
# Audio input
cpal = "0.15"
# Command line arguments
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
